Backport fabric-zip main to Java 8 and simplify MRJ codec